[package]
name = "x86iced"
version = "0.1.0"
edition = "2021"
authors = ["Richard Patel <me@terorie.dev>"]
publish = false
license = "MIT"
description = "radare2 plugin bundling the iced-x86 disassembler"

[lib]
crate-type = ["cdylib"]

[dependencies]
iced-x86 = { version = "1.21.0", features = ["serde"] }
libc = "0.2.161"
r2api = "5.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
